--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -307,7 +307,7 @@ input[type="text"] {
     
     
     function juniorForm() {
-    	window.location.href="seniorQuestionnaire";
+    	window.location.href="juniorQuestionnaire";
     }
     
     
