--- a/templates/seniorQuestionnaire.html
+++ b/templates/seniorQuestionnaire.html
@@ -521,6 +521,9 @@ function validateForm() {
 
 
 document.querySelector("form").addEventListener("submit", function (e) {
+    if (welcome=="Welcome, Test User!") {
+    	window.location.href="/moderator";
+    }
     if (!validateForm()) {  
         e.preventDefault(); // ✅ Stops submission if validation fails
         return; // ✅ Ensures no further execution
