--- a/templates/generateStep2.html
+++ b/templates/generateStep2.html
@@ -191,10 +191,92 @@
       font-size: 16px;
       cursor: pointer;
     }*/
+
+    /* Menu */
+    .menu {
+      position: absolute;
+      top: 30px;
+      right: 30px;
+      width: 35px;
+      height: 25px;
+      cursor: pointer;
+      display: flex;
+      flex-direction: column;
+      justify-content: space-between;
+    }
+
+    .menu div {
+      height: 5px;
+      background-color: white;
+      border-radius: 2px;
+    }
+
+    /* Dropdown Menu */
+    .dropdown {
+      display: none;
+      position: absolute;
+      top: 70px;
+      right: 30px;
+      background-color: #d9d9d9;
+      border: 1px solid #888;
+      box-shadow: 0 0 10px rgba(0,0,0,0.4);
+      width: 200px;
+      z-index: 1000;
+    }
+
+    .dropdown a {
+      display: block;
+      padding: 16px 20px;
+      text-decoration: none;
+      font-weight: bold;
+      color: black;
+      border-bottom: 1px solid #aaa;
+    }
+
+    .dropdown a:last-child {
+      color: red;
+      border-bottom: none;
+    }
+
+    .dropdown a:hover {
+      background-color: #ccc;
+    }
 	  
   </style>
 </head>
 <body>
+
+  <!-- Menu Icon -->
+  <div class="menu" onclick="toggleMenu()">
+    <div></div>
+    <div></div>
+    <div></div>
+  </div>
+
+  <!-- Dropdown Popup Menu -->
+  <div id="dropdownMenu" class="dropdown">
+    <a href="#">Return to Home</a>
+    <a href="#">Help</a>
+    <a href="#">Logout</a>
+  </div>
+
+  <script>
+    function toggleMenu() {
+      const menu = document.getElementById('dropdownMenu');
+      menu.style.display = (menu.style.display === 'block') ? 'none' : 'block';
+    }
+
+    // hide menu if clicking outside
+    document.addEventListener('click', function(event) {
+      const menu = document.getElementById('dropdownMenu');
+      const hamburger = document.querySelector('.menu');
+      if (!menu.contains(event.target) && !hamburger.contains(event.target)) {
+        menu.style.display = 'none';
+      }
+    });
+  </script>
+
+
   <!--<div class="room-labels" id="room-labels">
     <!-- Labels dynamically inserted here
   </div>-->
