--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -507,7 +507,7 @@
 
 
       <div class="extra">
-        <button type="submit" onclick="uploadFiles()">Back to Moderator Page</button>
+        <button type="submit" onclick="uploadFiles()">Save Rosters</button>
       </div>
     </form>
   </div>
