--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -295,7 +295,7 @@
 	    <p>Upload New Senior Roster</p>
             <input type="file" name="seniorRoster" accept=".csv" onchange="updateFileDisplay(this, 'seniorFileName')">
           </label>
-          <span id="seniorFileName" class="file-name"></span>
+          <span id="seniorFileName" class="file-name">No new file uploaded</span>
           
         </div>
       </div>
