--- a/templates/rosters.html
+++ b/templates/rosters.html
@@ -94,7 +94,7 @@
 
     }
 
-    button[type="submit"] {
+    button {
       background-color: #B51111;
       color: white;
       padding: 18px 36px;
@@ -105,7 +105,7 @@
       font-weight: bold;
     }
 
-    button[type="submit"]:hover {
+    button:hover {
       background-color: #9f0f0f;
     }
 
@@ -509,7 +509,7 @@
 
 
       <div class="extra">
-        <button type="submit" onclick="goBack()">Return to Moderator Page</button>
+        <button onclick="goBack()">Return to Moderator Page</button>
       </div>
     </form>
   </div>
