--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -261,7 +261,7 @@ input[type="text"] {
 </div>
 
         <button class="button" disabled=true onclick="viewResponses()">
-        	View Responses
+        	Download Responses
         </button>
     </div>
 	<div class="box">
