--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -169,7 +169,7 @@
     width: fit-content; /* ✅ Automatically adjusts width based on content */
     min-width: 400px; /* ✅ Ensures a minimum width */
     margin: auto; /* ✅ Centers the div */
-    margin-top: 20px;
+    margin-top: 50px;
 }
 
 
@@ -204,7 +204,10 @@ input[type="text"] {
       background-color: #9f0f0f;
     }
 
-
+.big {
+	display: flex;
+    flex-direction: column;
+}
 
 
 
@@ -242,6 +245,7 @@ input[type="text"] {
       }
     });
   </script>
+  <div class="big">
   <div class="wrapper">
 	<div class="box">
         <div class="heading">
@@ -282,7 +286,7 @@ input[type="text"] {
         	View Final Schedule
         </button>
         <button class="button" disabled=true onclick="assignPresiders()">
-        	Assign Junior Presiders
+        	Clear Database
         </button>
     </div>
     </div>
@@ -291,6 +295,8 @@ input[type="text"] {
     <div class="header">Set Committee Member Code</div>
     <input type="text" placeholder="Enter Code" id="Code"/>
     <button class="login-button" disabled="true" id="setCode">Set Code</button>
+</div>
+
 </div>
 
     <script>
