--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -294,7 +294,7 @@ input[type="text"] {
 <div class="box1">
     <div class="header">Set Committee Member Code</div>
     <input type="text" placeholder="Enter Code" id="Code"/>
-    <button class="login-button" disabled="true" id="setCode">Set Code</button>
+    <button class="login-button" disabled="true" id="setCode" onclick="sendCodeToBackend()">Set Code</button>
 </div>
 
 </div>
