--- a/templates/upload.html
+++ b/templates/upload.html
@@ -133,7 +133,7 @@ width:50px;
     <p>OR</p>
     
     <p>Make the spreadsheet public and enter the link below</p>
-    <input id="juniorSpreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="">
+    <input id="juniorSpreadsheetUrl" type="text" name="url" style="width:100%; font-size: 22px; font-family: Times New Roman;" placeholder="Paste spreadsheet csv here..." value="https://docs.google.com/spreadsheets/d/e/2PACX-1vQ7CKfSEaLsaw7I5GanMCMe8fU6DvOY79LIOAE7PnvSebb9kY51aVsDNShD7oMG6KLs29b811ijnDx7/pub?gid=0&single=true&output=csv">
     
     <br><br><br>
     <hr>
