--- a/templates/moderator.html
+++ b/templates/moderator.html
@@ -265,7 +265,7 @@ input[type="text"] {
     <button class="button half-width" onclick="juniorForm()">Junior Form</button>
 </div>
 
-        <button class="button" disabled=true onclick="viewResponses()">
+        <button class="button" onclick="viewResponses()">
         	Download Responses
         </button>
     </div>
@@ -324,7 +324,7 @@ input[type="text"] {
     
     
     function viewResponses() {
-    	window.location.href="viewResponses";
+    	window.location.href="/downloadBothProfiles";
     }
     
     function topicsByRoom() {
